# hello_realsense

./: .gitignore  CMakeLists.txt  README.md  frame_rate.cpp  main.cpp
ocv_utilities/: cvt_utils.hpp  ocv_utils.hpp
src/: capture.cpp  frame_time.cpp  hello_realsense.cpp  ocv_capture.cpp
